--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,15 @@
 !.gitconfig
 !.gitignore
 
+# Config directory (selective)
+!.config/
+.config/*
+!.config/gitconfig/
+!.config/gitconfig/.gitconfig-factory
+!.config/gitconfig/.gitconfig-gtcode
+!.config/gitconfig/.gitconfig-nshkrdotcom
+!.config/gitconfig/.gitconfig-vibecd
+
 # Development tool configurations
 # !.tool-versions
 # !.asdf/
@@ -31,6 +40,19 @@
 !.cursor/
 .cursor/*
 !.cursor/mcp.json
+
+# GitHub CLI configuration
+!.config/gh/
+!.config/gh/config.yml
+
+# Development tool configurations
+!.config/create-next-app-nodejs/
+!.config/create-next-app-nodejs/config.json
+
+# SSH configuration (public config only, not private keys)
+!.ssh/
+.ssh/*
+!.ssh/config
 
 # Documentation and notes
 !docs/
@@ -58,8 +80,8 @@
 .env*
 *.env
 
-# SSH keys and certificates  
-.ssh/
+# SSH keys and certificates (but allow config)
+# .ssh/ - Selectively allowed above for config file only
 *.pem
 *.key
 *.crt
@@ -67,6 +89,11 @@
 *_rsa.pub
 *_ed25519
 *_ed25519.pub
+# Block SSH private keys specifically
+.ssh/id_*
+.ssh/*_rsa
+.ssh/*_ed25519
+.ssh/known_hosts*
 
 # API keys and credential files
 .keys/
